So I don't lose progress. Upgraded rare candy tools to use DataFixerUpper and stuff to convert configs to modern version. ><