@@ -1,8 +1,7 @@
 package gg.generations.rarecandy.tools.pkcreator;
 
-import com.google.gson.JsonObject;
 import gg.generations.rarecandy.pokeutils.ModelConfig;
-import gg.generations.rarecandy.pokeutils.PixelAsset;
+import gg.generations.rarecandy.pokeutils.codec.JsonIo;
 import org.apache.commons.compress.archivers.sevenz.SevenZOutputFile;
 
 import java.io.BufferedInputStream;
@@ -39,10 +38,10 @@ public class PixelmonArchiveBuilder {
                                 BufferedInputStream is = null;
 
                                 if (file.getFileName().toString().equals("config.json") && scale != null) {
-                                    var config = PixelAsset.GSON.fromJson(Files.readString(file), JsonObject.class);
-                                    config.addProperty("scale", scale);
+                                    var config = JsonIo.read(ModelConfig.CODEC, Files.readAllBytes(file));
+                                    config.scale = scale;
 
-                                    is = new BufferedInputStream(new ByteArrayInputStream(PixelAsset.GSON.toJson(config).getBytes()));
+                                    is = new BufferedInputStream(new ByteArrayInputStream(JsonIo.write(ModelConfig.CODEC, config)));
                                 } else {
                                     is = new BufferedInputStream(Files.newInputStream(file));
                                 }
